# hh_vacancies_db

./: .gitignore  README.md  config.py  main.py  pyproject.toml
src/: base_api.py  company.py  config.py  data_filler.py  database_creator.py  db_manager.py  hh_api.py  vacancy.py
utils/: database_creator.py  helpers.py
